docusaurus/versioned_docs/version-2.7.2/examples/using-odra-modules.md
---
sidebar_position: 2
---

# Using odra-modules

Besides the Odra framework, you can attach to your project `odra-module` - a set of plug-and-play modules.

If you followed the [Installation guide] your Cargo.toml should look like:

```toml title=Cargo.toml
[package]
name = "my_project"
version = "0.1.0"
edition = "2021"

[dependencies]
odra = "2.7.2"

[dev-dependencies]
odra-test = "2.7.2"

[build-dependencies]
odra-build = "2.7.2"

[[bin]]
name = "my_project_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "my_project_build_schema"
path = "bin/build_schema.rs"
test = false

[profile.release]
codegen-units = 1
lto = true

[profile.dev.package."*"]
opt-level = 3
```

To use `odra-modules`, edit your `dependency` and `features` sections.

```toml title=Cargo.toml
[dependencies]
odra = "2.7.2"
odra-modules = "2.7.2"
```

Now, the only thing left is to add a module to your contract.

Let's write an example of `MyToken` based on the `Cep18` module.

```rust
use odra::prelude::*;
use odra::casper_types::U256;
use odra_modules::cep18_token::Cep18;

#[odra::module]
pub struct MyToken {
    token: SubModule<Cep18>
}

#[odra::module]
impl MyToken {
    pub fn init(&mut self, initial_supply: U256) {
        let symbol = String::from("MT");
        let name = String::from("MyToken");
        let decimals = 9u8;
        self.token.init(symbol, name, decimals, initial_supply);
    }

    pub fn name(&self) -> String {
        self.token.name()
    }

    pub fn symbol(&self) -> String {
        self.token.symbol()
    }

    pub fn decimals(&self) -> u8 {
        self.token.decimals()
    }

    pub fn total_supply(&self) -> U256 {
        self.token.total_supply()
    }

    pub fn balance_of(&self, address: &Address) -> U256 {
        self.token.balance_of(address)
    }

    pub fn allowance(&self, owner: &Address, spender: &Address) -> U256 {
        self.token.allowance(owner, spender)
    }

    pub fn transfer(&mut self, recipient: &Address, amount: &U256) {
        self.token.transfer(recipient, amount);
    }

    pub fn transfer_from(&mut self, owner: &Address, recipient: &Address, amount: &U256) {
        self.token.transfer_from(owner, recipient, amount);
    }

    pub fn approve(&mut self, spender: &Address, amount: &U256) {
        self.token.approve(spender, amount);
    }
}
```

:::info
All available modules are placed in the main [Odra repository].
:::

## Available modules

Odra modules comes with couple of ready-to-use modules and reusable extensions.

### Tokens

#### CEP-18

Casper Ecosystem Proposal 18 (CEP-18) is a standard interface for the CSPR and the custom made tokens. Inspired by the ERC20 standard. Read more about the CEP-18 [here](https://github.com/casper-network/ceps/blob/master/text/0018-token-standard.md).

#### CEP-95

Casper Ecosystem Proposal 95 (CEP-95) is a Casper NFT Standard. It aims to replace CEP-47 and CEP-78, which have flaws that complicate their support in the ecosystem. This standard is aligned with Ethereum's ERC-721, but makes adjustments relevant for the Casper Ecosystem. Similarly to ERC-721, this standard can be used to represent a various range of tokenized assets Read more about the CEP-95 [here](https://github.com/casper-network/ceps/blob/master/text/0095-nft-standard.md).

#### CEP-2612

The `CEP2612` module is an adaptation of [ERC-2612](https://eips.ethereum.org/EIPS/eip-2612) for the Casper Network. It extends a CEP-18 token with a `permit` entry point that lets a token holder grant an allowance via an off-chain EIP-712 signature instead of an on-chain `approve` transaction, making the approval gas-less from the holder's perspective.

#### CEP-3009

The `CEP3009` module is an adaptation of [ERC-3009](https://eips.ethereum.org/EIPS/eip-3009) ("Transfer With Authorization") for the Casper Network. It lets a CEP-18 token holder authorize a transfer of their tokens via an off-chain EIP-712 signature, which a third party (a relayer, or the recipient themselves) submits on-chain using `transfer_with_authorization` or `receive_with_authorization`. An unused authorization can be revoked with `cancel_authorization`.

#### Erc20

The `Erc20` module implements the [ERC20](https://eips.ethereum.org/EIPS/eip-20) standard.

#### Erc721

The `Erc721Base` module implements the [ERC721](https://eips.ethereum.org/EIPS/eip-721) standard, adjusted for the Odra framework.

The `Erc721Token` module implements the `ERC721Base` and additionally uses
the `Erc721Metadata` and `Ownable` extensions.

The `Erc721Receiver` trait lets you implement your own logic for receiving NFTs.

The `OwnedErc721WithMetadata` trait is a combination of `Erc721Token`, `Erc721Metadata` and `Ownable` modules.

#### Erc1155

The `Erc1155Base` module implements the [ERC1155](https://eips.ethereum.org/EIPS/eip-1155) standard, adjusted for the Odra framework.

The `Erc1155Token` module implements the `ERC1155Base` and additionally uses the `Ownable` extension.

The `OwnedErc1155` trait is a combination of `Erc1155Token` and `Ownable` modules.

#### Wrapped native token

The `WrappedNativeToken` module implements the Wrapper for the native token,
it was inspired by the WETH.

### Access

#### AccessControl

This module enables the implementation of role-based access control mechanisms for children
modules. Roles are identified by their 32-bytes identifier, which should be unique and exposed in the external API.

#### Ownable

This module provides a straightforward access control feature that enables exclusive access to particular functions by an account, known as the owner.

The account that initiates the module is automatically assigned as the owner. However, ownership can be transferred later by using the
`transfer_ownership()` function.

#### Ownable2Step

An extension of the `Ownable` module.

Ownership can be transferred in a two-step process by using `transfer_ownership()` and `accept_ownership()` functions.

### Security

#### Pausable

A module allowing to implement an emergency stop mechanism that can be triggered by any account.

[Installation guide]: ../getting-started/installation.md
[Odra repository]: https://github.com/odradev/odra
